Added website design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
     <html>
       <head>
+        <style>
+          body {background-color; rgb(200, 200, 150); text-align: center;}
+          h1 {font-family; "Noto Sans Kr", sans-serif; text-align: center;}
+          p {color: green; text-align: center}
+        </style>
       </head>
       <body>
 
